test/errors/templates_error/zs/instantiation_name_clash_across_packages_error/test_struct.zs
package instantiation_name_clash_across_packages_error.test_struct;

struct TestStruct<T>
{
    T value;
};
